# paperchase-cli

./: .gitignore  LICENSE  MANUAL_LAUNCH_STEPS.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
fs-watcher/: Cargo.toml  README.md
fs-watcher/src/: main.rs
homebrew-tap/Formula/: paperchase.rb
mcp-ts/: README.md  package-lock.json  package.json
mcp-ts/src/: bridge.ts  server.ts
npx-shim/: README.md  package.json
paperchase/: __init__.py  __main__.py  cli.py  config.py  manifesto.py
paperchase/loop/: __init__.py  critic.py  executor.py  planner.py  state.py  subagent.py
paperchase/mcp/: __init__.py  server.py  tool_export.py
paperchase/repl/: __init__.py  prompts.py  renderer.py  session.py
paperchase/runtimes/: __init__.py  base.py  ollama.py  router.py
paperchase/skills/: __init__.py  registry.py  schema.py
paperchase/skills/builtin/docx/: SKILL.md
paperchase/skills/builtin/ecom-competitor-analysis/: SKILL.md
paperchase/skills/builtin/ecom-post-purchase-emails/: SKILL.md
paperchase/skills/builtin/ecom-review-mining/: SKILL.md
paperchase/skills/builtin/ecom-store-audit/: SKILL.md
paperchase/skills/builtin/ugc-vertical-script/: SKILL.md
paperchase/skills/builtin/web-research/: skill.py  skill.toml
paperchase/skills/builtin/webapp/: SKILL.md
paperchase/skills/builtin/xlsx/: SKILL.md
paperchase/skills/builtin/youtube-growth/: SKILL.md
paperchase/skills/builtin/youtube-script/: SKILL.md
paperchase/skills/builtin/youtube-seo/: SKILL.md
paperchase/skills/builtin/youtube-strategy/: SKILL.md
paperchase/tools/: files.py  shell.py  skills.py  web.py
paperchase/vault/: __init__.py  retriever.py  store.py
paperchase/vault/migrations/: __init__.py  v001_initial.py
tests/python/: test_cli.py  test_config.py  test_loop_state.py  test_loop_subagent.py  test_mcp_tool_export.py  test_repl_session.py  test_runtimes_base.py  test_runtimes_ollama.py  test_runtimes_router.py  test_skills_github.py  test_skills_registry.py  test_tools_files.py  test_tools_shell.py  test_tools_skills.py  test_tools_web.py  test_vault_retriever.py  test_vault_store.py  test_version.py
