[package]
name = "paperchase-fs-watcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["PaperChaseLabs <mgmt@paperchasewebb.com>"]
description = "File system watcher for PaperChase — streams notify events to Python core over Unix socket."

[[bin]]
name = "paperchase-fs-watcher"
path = "src/main.rs"

[dependencies]
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
